tests/test_input_files/good/test_good_array_35.punkt
main {
	const A = alloc [int] (-1).
	
}
