tests/test_input_files/bad/test_bad_array_1.punkt
main {
	const a = alloc [int].
}
